kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ufo-spotter-deployment
  namespace: ufo-spotter
spec:
  replicas: 5
  selector:
    matchLabels:
      app: ufo-spotter
  template:
    metadata:
      labels:
        app: ufo-spotter
    spec:
      containers:
        - name: ufo-spotter
          image: nasquez23/ufo-spotter:latest
          ports:
            - containerPort: 5000
