kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ufo-spotter-service
  namespace: ufo-spotter
spec:
  selector:
    app: ufo-spotter
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
