kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ufo-spotter-ingress
  namespace: ufo-spotter
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: ufo-spotter.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ufo-spotter-service
            port:
              number: 5000
